Added LinkedIn link.

--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Test</title>
+    <title>Eugene Cheung</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <div id="main">
-      <p>Coming soon</p>
+      <p>Under construction</p>
       <a href="https://www.twitter.com/arkon">Twitter</a>
       <span>-</span>
       <a href="http://www.dribbble.com/arkon">Dribbble</a>
+      <span>-</span>
+      <a href="http://www.linkedin.com/pub/eugene-cheung/82/319/302">LinkedIn</a>
     </div>
   </body>
 </html>
