Removed autogen site. Initial commit of new site.

--- a/index.html
+++ b/index.html
@@ -5,16 +5,59 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Eugene Cheung</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.min.css">
   </head>
   <body>
-    <div id="main">
-      <p>Under construction</p>
-      <a href="https://www.twitter.com/arkon">Twitter</a>
-      <span>-</span>
-      <a href="http://www.dribbble.com/arkon">Dribbble</a>
-      <span>-</span>
-      <a href="http://www.linkedin.com/pub/eugene-cheung/82/319/302">LinkedIn</a>
-    </div>
+    <section id="portfolio">
+      <h2>Page under construction!</h2>
+    </section>
+    <header>
+      <h1>Eugene Cheung</h1>
+      <section id="social">
+        <a href="https://www.twitter.com/arkon" title="@arkon on Twitter">Twitter</a>
+        <a href="http://www.dribbble.com/arkon" title="arkon on Dribbble">Dribbble</a>
+        <a href="http://www.linkedin.com/pub/eugene-cheung/82/319/302" title="LinkedIn profile">LinkedIn</a>
+        <a href="https://plus.google.com/+EugeneCheung/posts" title="Google+ profile">Google+</a>
+        <a href="https://github.com/arkon94" title="arkon94 on GitHub">GitHub</a>
+      </section>
+    </header>
+    <section id="hero">
+      <h2>Hi, I like creating things.</h2>
+    </section>
+    <section id="about">
+      <h3>About me</h3>
+      <div class="container">
+        <p>I’m a student at University of Toronto St. George studying to become a Computer Science specialist.
+        <p>I love creating things for screens big and small.
+        <p>I like to <a href="https://www.twitter.com/arkon">tweet</a> and <a href="http://www.dribbble.com/arkon">dribbble</a> things.
+        <p>You can also check out <a href="#">my full résumé in PDF form here</a>.
+      </div>
+    </section>
+    <section id="portfolio">
+      <h3>Some things I've made</h3>
+      <div class="container">
+        <a href="#" class="shot">
+          <img src="http://dummyimage.com/300x200/777/fff.jpg" />
+          <span>Text</span>
+        </a>
+        <a href="#" class="shot">
+          <img src="http://dummyimage.com/300x200/777/fff.jpg" />
+          <span>Text</span>
+        </a>
+        <a href="#" class="shot">
+          <img src="http://dummyimage.com/300x200/777/fff.jpg" />
+          <span>Text</span>
+        </a>
+        <a href="#" class="shot">
+          <img src="http://dummyimage.com/300x200/777/fff.jpg" />
+          <span>Text</span>
+        </a>
+      </div>
+    </section>
+    <footer>
+      <a href="#" id="top">^<br/>Back to top</a>
+      <p id="contact">Let's talk. <a href="https://www.twitter.com/arkon">Tweet me</a>, or <a href="mailto:ey.cheung@outlook.com">email me</a>.</p>
+      <p id="copyright">&copy; 2013 Eugene Cheung</p>
+    </footer>
   </body>
 </html>
