Added social media link icons.

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   </head>
   <body>
     <section id="portfolio">
-      <h2>Page under construction!</h2>
+      <h3>Page under construction!</h3>
     </section>
     <header>
       <h1>Eugene Cheung</h1>
       <section id="social">
-        <a href="https://www.twitter.com/arkon" title="@arkon on Twitter">Twitter</a>
-        <a href="http://www.dribbble.com/arkon" title="arkon on Dribbble">Dribbble</a>
-        <a href="http://www.linkedin.com/pub/eugene-cheung/82/319/302" title="LinkedIn profile">LinkedIn</a>
-        <a href="https://plus.google.com/+EugeneCheung/posts" title="Google+ profile">Google+</a>
-        <a href="https://github.com/arkon94" title="arkon94 on GitHub">GitHub</a>
+        <a href="https://www.twitter.com/arkon" title="@arkon on Twitter" id="twitter">Twitter</a>
+        <a href="http://www.dribbble.com/arkon" title="arkon on Dribbble" id="dribbble">Dribbble</a>
+        <a href="http://www.linkedin.com/pub/eugene-cheung/82/319/302" title="LinkedIn profile" id="linkedin">LinkedIn</a>
+        <a href="https://plus.google.com/+EugeneCheung/posts" title="Google+ profile" id="gplus">Google+</a>
+        <a href="https://github.com/arkon94" title="arkon94 on GitHub" id="github">GitHub</a>
       </section>
     </header>
     <section id="hero">
