Updated portfolio grid with names, better styling.

--- a/index.html
+++ b/index.html
@@ -35,24 +35,42 @@
     </section>
     <section id="portfolio">
       <h3>Some things I've made</h3>
-      <div class="container">
         <a href="#" class="shot">
           <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-          <span>Text</span>
+          <span>Cryptr</span>
         </a>
         <a href="#" class="shot">
           <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-          <span>Text</span>
+          <span>Vote for Jon &amp; Nick</span>
         </a>
         <a href="#" class="shot">
           <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-          <span>Text</span>
+          <span>ReTwit for Twitter</span>
         </a>
         <a href="#" class="shot">
           <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-          <span>Text</span>
+          <span>Yearbook</span>
         </a>
-      </div>
+        <a href="#" class="shot">
+          <img src="http://dummyimage.com/300x200/777/fff.jpg" />
+          <span>NewGenBook</span>
+        </a>
+        <a href="#" class="shot">
+          <img src="http://dummyimage.com/300x200/777/fff.jpg" />
+          <span>Leanback TV</span>
+        </a>
+        <a href="#" class="shot">
+          <img src="http://dummyimage.com/300x200/777/fff.jpg" />
+          <span>PixelTwo</span>
+        </a>
+        <a href="#" class="shot">
+          <img src="http://dummyimage.com/300x200/777/fff.jpg" />
+          <span>The Right Minecraft Forums</span>
+        </a>
+        <a href="#" class="shot">
+          <img src="http://dummyimage.com/300x200/777/fff.jpg" />
+          <span>Solo-Soft</span>
+        </a>
     </section>
     <footer>
       <a href="#" id="top">^<br/>Back to top</a>
