--- a/index.html
+++ b/index.html
@@ -21,56 +21,52 @@
         <a href="https://github.com/arkon94" title="arkon94 on GitHub" id="github">GitHub</a>
       </section>
     </header>
-    <section id="hero">
-      <h2>Hi, I like creating things.</h2>
-    </section>
-    <section id="about">
-      <h3>About me</h3>
-      <div class="container">
-        <p>I’m a student at University of Toronto St. George studying to become a Computer Science specialist.
-        <p>I love creating things for screens big and small.
-        <p>I like to <a href="https://www.twitter.com/arkon">tweet</a> and <a href="http://www.dribbble.com/arkon">dribbble</a> things.
-        <p>You can also check out <a href="#">my full résumé in PDF form here</a>.
-      </div>
+    <section id="image">
+      <section id="hero">
+        <h2>Hi, I like creating things.</h2>
+      </section>
+      <section id="about">
+        <h3>About me</h3>
+        <div class="container">
+          <p>I’m a student at University of Toronto St. George studying to become a Computer Science specialist.
+          <p>I love creating things for screens big and small.
+          <p>I like to <a href="https://www.twitter.com/arkon">tweet</a> and <a href="http://www.dribbble.com/arkon">dribbble</a> things.
+          <p>You can also check out <a href="#">my full résumé in PDF form here</a>.
+        </div>
+      </section>
     </section>
     <section id="portfolio">
       <h3>Some things I've made</h3>
-        <a href="#" class="shot">
-          <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-          <span>Cryptr</span>
-        </a>
-        <a href="#" class="shot">
-          <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-          <span>Vote for Jon &amp; Nick</span>
-        </a>
-        <a href="#" class="shot">
-          <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-          <span>ReTwit for Twitter</span>
-        </a>
-        <a href="#" class="shot">
-          <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-          <span>Yearbook</span>
-        </a>
-        <a href="#" class="shot">
-          <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-          <span>NewGenBook</span>
-        </a>
-        <a href="#" class="shot">
-          <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-          <span>Leanback TV</span>
-        </a>
-        <a href="#" class="shot">
-          <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-          <span>PixelTwo</span>
-        </a>
-        <a href="#" class="shot">
-          <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-          <span>The Right Minecraft Forums</span>
-        </a>
-        <a href="#" class="shot">
-          <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-          <span>Solo-Soft</span>
-        </a>
+        <div class="container">
+          <a href="http://www.cryptr.ca/" class="shot">
+            <img src="http://dummyimage.com/300x200/777/fff.jpg" />
+            <span>Cryptr</span>
+          </a><a href="http://pixeltwo.com/arkon/cssu/" class="shot">
+            <img src="http://dummyimage.com/300x200/777/fff.jpg" />
+            <span>Vote for Jon &amp; Nick</span>
+          </a><a href="https://chrome.google.com/webstore/detail/retwit-for-twitter/bkpjdbhepoejcinkccodijdpoifkfbnl" class="shot">
+            <img src="http://dummyimage.com/300x200/777/fff.jpg" />
+            <span>ReTwit for Twitter</span>
+          </a><a href="#" class="shot">
+            <img src="http://dummyimage.com/300x200/777/fff.jpg" />
+            <span>Yearbook</span>
+          </a><a href="http://thinqtek.com/newgenbook/" class="shot">
+            <img src="http://dummyimage.com/300x200/777/fff.jpg" />
+            <span>NewGenBook</span>
+          </a><a href="http://www.thinqtek.com/leanback/" class="shot">
+            <img src="http://dummyimage.com/300x200/777/fff.jpg" />
+            <span>Leanback TV</span>
+          </a><a href="http://pixeltwo.com/" class="shot">
+            <img src="http://dummyimage.com/300x200/777/fff.jpg" />
+            <span>PixelTwo</span>
+          </a><a href="http://www.therightminecraft.com/" class="shot">
+            <img src="http://dummyimage.com/300x200/777/fff.jpg" />
+            <span>The Right Minecraft Forums</span>
+          </a><a href="http://www.solo-soft.com/" class="shot">
+            <img src="http://dummyimage.com/300x200/777/fff.jpg" />
+            <span>Solo-Soft</span>
+          </a>
+        </div>
     </section>
     <footer>
       <a href="#" id="top">^<br/>Back to top</a>
