--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="css/styles.min.css">
   </head>
   <body>
-    <section id="portfolio">
+    <!-- <section id="portfolio">
       <h3>Page under construction!</h3>
-    </section>
+    </section> -->
     <header>
       <h1>Eugene Cheung</h1>
+      <h4>Developer + Designer</h4>
       <section id="social">
         <a href="https://www.twitter.com/arkon" title="@arkon on Twitter" id="twitter">Twitter</a>
         <a href="http://www.dribbble.com/arkon" title="arkon on Dribbble" id="dribbble">Dribbble</a>
@@ -28,48 +29,56 @@
       <section id="about">
         <h3>About me</h3>
         <div class="container">
-          <p>I’m a student at University of Toronto St. George studying to become a Computer Science specialist.
-          <p>I love creating things for screens big and small.
-          <p>I like to <a href="https://www.twitter.com/arkon">tweet</a> and <a href="http://www.dribbble.com/arkon">dribbble</a> things.
-          <p>You can also check out <a href="#">my full résumé in PDF form here</a>.
+          <p>I’m a Computer Science student at University of Toronto St. George.
+          <p>I love crafting beautiful creations for screens big and small.
+          <p>Check out some of <a href="http://www.dribbble.com/arkon">my dribbble shots</a> and my <a href="http://www.linkedin.com/pub/eugene-cheung/82/319/302">LinkedIn profile</a>.
+          <p>Interested in working with me? Get in touch through <a href="https://www.twitter.com/arkon">Twitter</a>, or <a href="mailto:ey.cheung@outlook.com">email</a>.
         </div>
       </section>
     </section>
     <section id="portfolio">
       <h3>Some things I've made</h3>
-        <div class="container">
-          <a href="http://www.cryptr.ca/" class="shot">
-            <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-            <span>Cryptr</span>
-          </a><a href="http://pixeltwo.com/arkon/cssu/" class="shot">
-            <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-            <span>Vote for Jon &amp; Nick</span>
-          </a><a href="https://chrome.google.com/webstore/detail/retwit-for-twitter/bkpjdbhepoejcinkccodijdpoifkfbnl" class="shot">
-            <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-            <span>ReTwit for Twitter</span>
-          </a><a href="#" class="shot">
-            <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-            <span>Yearbook</span>
-          </a><a href="http://thinqtek.com/newgenbook/" class="shot">
-            <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-            <span>NewGenBook</span>
-          </a><a href="http://www.thinqtek.com/leanback/" class="shot">
-            <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-            <span>Leanback TV</span>
-          </a><a href="http://pixeltwo.com/" class="shot">
-            <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-            <span>PixelTwo</span>
-          </a><a href="http://www.therightminecraft.com/" class="shot">
-            <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-            <span>The Right Minecraft Forums</span>
-          </a><a href="http://www.solo-soft.com/" class="shot">
-            <img src="http://dummyimage.com/300x200/777/fff.jpg" />
-            <span>Solo-Soft</span>
-          </a>
-        </div>
+      <div class="container">
+        <a href="http://www.cryptr.ca/" class="shot">
+          <img src="img/portfolio/cryptr.jpg" />
+          <span>Cryptr</span>
+        </a>
+        <a href="http://pixeltwo.com/arkon/cssu/" class="shot">
+          <img src="img/portfolio/jonnick.jpg" />
+          <span>Vote for Jon &amp; Nick</span>
+        </a>
+        <a href="https://chrome.google.com/webstore/detail/retwit-for-twitter/bkpjdbhepoejcinkccodijdpoifkfbnl" class="shot">
+          <img src="img/portfolio/retwit.jpg" />
+          <span>ReTwit for Twitter</span>
+        </a>
+        <a href="http://dribbble.com/shots/1446264-Transit-Watch?list=following" class="shot">
+          <img src="img/portfolio/transit.jpg" />
+          <span>Transit Watch</span>
+        </a>
+        <a href="http://thinqtek.com/newgenbook/" class="shot">
+          <img src="img/portfolio/ngb.jpg" />
+          <span>NewGenBook</span>
+        </a>
+        <a href="http://www.thinqtek.com/leanback/" class="shot">
+          <img src="img/portfolio/leanback.jpg" />
+          <span>Leanback TV</span>
+        </a>
+        <a href="http://pixeltwo.com/" class="shot">
+          <img src="img/portfolio/pixeltwo.jpg" />
+          <span>PixelTwo</span>
+        </a>
+        <a href="http://www.therightminecraft.com/" class="shot">
+          <img src="img/portfolio/mc.jpg" />
+          <span>The Right Minecraft Forums</span>
+        </a>
+        <a href="http://www.solo-soft.com/" class="shot">
+          <img src="img/portfolio/solo.jpg" />
+          <span>Solo-Soft</span>
+        </a>
+      </div>
     </section>
     <footer>
-      <a href="#" id="top">^<br/>Back to top</a>
+      <a href="#" id="top">Back to top</a>
       <p id="contact">Let's talk. <a href="https://www.twitter.com/arkon">Tweet me</a>, or <a href="mailto:ey.cheung@outlook.com">email me</a>.</p>
       <p id="copyright">&copy; 2013 Eugene Cheung</p>
     </footer>
