--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     <section id="portfolio">
       <h3>Some things I've made</h3>
       <div class="container">
+        <a href="http://www.cryptr.ca/uv/" class="shot">
+          <img src="img/portfolio/uv.jpg" />
+          <span>Ultraviolet</span>
+        </a>
         <a href="http://www.cryptr.ca/" class="shot">
           <img src="img/portfolio/cryptr.jpg" />
           <span>Cryptr</span>
