Added smooth scroll to top.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Eugene Cheung</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="css/styles.min.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   </head>
   <body>
     <!-- <section id="portfolio">
@@ -82,9 +83,10 @@
       </div>
     </section>
     <footer>
-      <a href="#" id="top">Back to top</a>
+      <a id="top">Back to top</a>
       <p id="contact">Let's talk. <a href="https://www.twitter.com/arkon">Tweet me</a>, or <a href="mailto:ey.cheung@outlook.com">email me</a>.</p>
       <p id="copyright">&copy; 2013 Eugene Cheung</p>
     </footer>
   </body>
+  <script src="js/script.min.js"></script>
 </html>
