Rearranged some things. Capitalized Dribbble.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container">
           <p>I’m a Computer Science student at University of Toronto St. George.
           <p>I love crafting beautiful creations for screens big and small.
-          <p>Check out some of <a href="http://www.dribbble.com/arkon">my dribbble shots</a> and my <a href="http://www.linkedin.com/pub/eugene-cheung/82/319/302">LinkedIn profile</a>.
+          <p>Check out some of <a href="http://www.dribbble.com/arkon">my Dribbble shots</a> and my <a href="http://www.linkedin.com/pub/eugene-cheung/82/319/302">LinkedIn profile</a>.
           <p>Interested in working with me? Get in touch through <a href="https://www.twitter.com/arkon">Twitter</a>, or <a href="mailto:ey.cheung@outlook.com">email</a>.
         </div>
       </section>
@@ -40,43 +40,43 @@
     <section id="portfolio">
       <h3>Some things I've made</h3>
       <div class="container">
-        <a href="http://www.cryptr.ca/uv/" class="shot">
+        <a class="shot" href="http://www.cryptr.ca/uv/">
           <img src="img/portfolio/uv.jpg" />
           <span>Ultraviolet</span>
         </a>
-        <a href="http://www.cryptr.ca/" class="shot">
+        <a class="shot" href="http://www.cryptr.ca/">
           <img src="img/portfolio/cryptr.jpg" />
           <span>Cryptr</span>
         </a>
-        <a href="http://pixeltwo.com/arkon/cssu/" class="shot">
+        <a class="shot" href="http://pixeltwo.com/arkon/cssu/">
           <img src="img/portfolio/jonnick.jpg" />
           <span>Vote for Jon &amp; Nick</span>
         </a>
-        <a href="https://chrome.google.com/webstore/detail/retwit-for-twitter/bkpjdbhepoejcinkccodijdpoifkfbnl" class="shot">
+        <a class="shot" href="https://chrome.google.com/webstore/detail/retwit-for-twitter/bkpjdbhepoejcinkccodijdpoifkfbnl">
           <img src="img/portfolio/retwit.jpg" />
           <span>ReTwit for Twitter</span>
         </a>
-        <a href="http://dribbble.com/shots/1446264-Transit-Watch?list=following" class="shot">
+        <a class="shot" href="http://dribbble.com/shots/1446264-Transit-Watch">
           <img src="img/portfolio/transit.jpg" />
           <span>Transit Watch</span>
         </a>
-        <a href="http://thinqtek.com/newgenbook/" class="shot">
-          <img src="img/portfolio/ngb.jpg" />
-          <span>NewGenBook</span>
-        </a>
-        <a href="http://www.thinqtek.com/leanback/" class="shot">
+        <a class="shot" href="http://www.thinqtek.com/leanback/">
           <img src="img/portfolio/leanback.jpg" />
           <span>Leanback TV</span>
         </a>
-        <a href="http://pixeltwo.com/" class="shot">
+        <a class="shot" href="http://thinqtek.com/newgenbook/">
+          <img src="img/portfolio/ngb.jpg" />
+          <span>NewGenBook</span>
+        </a>
+        <a class="shot" href="http://pixeltwo.com/">
           <img src="img/portfolio/pixeltwo.jpg" />
           <span>PixelTwo</span>
         </a>
-        <a href="http://www.therightminecraft.com/" class="shot">
+        <a class="shot" href="http://www.therightminecraft.com/">
           <img src="img/portfolio/mc.jpg" />
           <span>The Right Minecraft Forums</span>
         </a>
-        <a href="http://www.solo-soft.com/" class="shot">
+        <a class="shot" href="http://www.solo-soft.com/">
           <img src="img/portfolio/solo.jpg" />
           <span>Solo-Soft</span>
         </a>
