Centered some text.

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <section id="about">
         <h3>About me</h3>
         <div class="container">
-          <p>I’m a Computer Science student at University of Toronto St. George.
-          <p>I love crafting beautiful creations for screens big and small.
-          <p>Check out some of <a href="http://www.dribbble.com/arkon">my Dribbble shots</a> and my <a href="http://www.linkedin.com/pub/eugene-cheung/82/319/302">LinkedIn profile</a>.
+          <p>I’m a student at University of Toronto St. George studying to get a BSc. with a specialization in computer science.
+          I began designing and developing things at the age of 12, and I've loved crafting beautiful creations for screens big and small ever since.
+          You can check out some of creations below, or <a href="http://www.dribbble.com/arkon">my Dribbble shots</a> and my <a href="http://www.linkedin.com/pub/eugene-cheung/82/319/302">LinkedIn profile</a>.
           <p>Interested in working with me? Get in touch through <a href="https://www.twitter.com/arkon">Twitter</a>, or <a href="mailto:ey.cheung@outlook.com">email</a>.
         </div>
       </section>
@@ -85,7 +85,7 @@
     <footer>
       <a id="top">Back to top</a>
       <p id="contact">Let's talk. <a href="https://www.twitter.com/arkon">Tweet me</a>, or <a href="mailto:ey.cheung@outlook.com">email me</a>.</p>
-      <p id="copyright">&copy; 2013 Eugene Cheung</p>
+      <p id="copyright">&copy; 2014 Eugene Cheung</p>
     </footer>
   </body>
   <script src="js/script.min.js"></script>
