--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Eugene Cheung</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="icon" type="image/png" href="img/icon.png">
     <link rel="stylesheet" href="css/styles.min.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   </head>
@@ -16,11 +17,21 @@
       <h1>Eugene Cheung</h1>
       <h4>Developer + Designer</h4>
       <section id="social">
-        <a href="https://www.twitter.com/arkon" title="@arkon on Twitter" id="twitter">Twitter</a>
-        <a href="http://www.dribbble.com/arkon" title="arkon on Dribbble" id="dribbble">Dribbble</a>
-        <a href="http://www.linkedin.com/pub/eugene-cheung/82/319/302" title="LinkedIn profile" id="linkedin">LinkedIn</a>
-        <a href="https://plus.google.com/+EugeneCheung/posts" title="Google+ profile" id="gplus">Google+</a>
-        <a href="https://github.com/arkon94" title="arkon94 on GitHub" id="github">GitHub</a>
+        <a id="twitter" href="https://www.twitter.com/arkon" title="@arkon on Twitter">
+          Twitter
+        </a>
+        <a id="dribbble" href="http://www.dribbble.com/arkon" title="arkon on Dribbble">
+          Dribbble
+        </a>
+        <a id="linkedin" href="http://www.linkedin.com/pub/eugene-cheung/82/319/302" title="LinkedIn profile">
+          LinkedIn
+        </a>
+        <a id="gplus" href="https://plus.google.com/+EugeneCheung/posts" title="Google+ profile">
+          Google+
+        </a>
+        <a id="github" href="https://github.com/arkon94" title="arkon94 on GitHub">
+          GitHub
+        </a>
       </section>
     </header>
     <section id="image">
@@ -41,43 +52,43 @@
       <h3>Some things I've made</h3>
       <div class="container">
         <a class="shot" href="http://www.cryptr.ca/uv/">
-          <img src="img/portfolio/uv.jpg" />
+          <img src="img/portfolio/uv.jpg" alt="Ultraviolet">
           <span>Ultraviolet</span>
         </a>
         <a class="shot" href="http://www.cryptr.ca/">
-          <img src="img/portfolio/cryptr.jpg" />
+          <img src="img/portfolio/cryptr.jpg" alt="Cryptr">
           <span>Cryptr</span>
         </a>
         <a class="shot" href="http://pixeltwo.com/arkon/cssu/">
-          <img src="img/portfolio/jonnick.jpg" />
+          <img src="img/portfolio/jonnick.jpg" alt="Jon &amp; Nick">
           <span>Vote for Jon &amp; Nick</span>
         </a>
         <a class="shot" href="https://chrome.google.com/webstore/detail/retwit-for-twitter/bkpjdbhepoejcinkccodijdpoifkfbnl">
-          <img src="img/portfolio/retwit.jpg" />
+          <img src="img/portfolio/retwit.jpg" alt="ReTwit for Twitter">
           <span>ReTwit for Twitter</span>
         </a>
         <a class="shot" href="http://dribbble.com/shots/1446264-Transit-Watch">
-          <img src="img/portfolio/transit.jpg" />
+          <img src="img/portfolio/transit.jpg" alt="Transit Watch">
           <span>Transit Watch</span>
         </a>
         <a class="shot" href="http://www.thinqtek.com/leanback/">
-          <img src="img/portfolio/leanback.jpg" />
+          <img src="img/portfolio/leanback.jpg" alt="Leanback">
           <span>Leanback TV</span>
         </a>
         <a class="shot" href="http://thinqtek.com/newgenbook/">
-          <img src="img/portfolio/ngb.jpg" />
+          <img src="img/portfolio/ngb.jpg" alt="NewGenBook for Facebook">
           <span>NewGenBook</span>
         </a>
         <a class="shot" href="http://pixeltwo.com/">
-          <img src="img/portfolio/pixeltwo.jpg" />
+          <img src="img/portfolio/pixeltwo.jpg" alt="PixelTwo">
           <span>PixelTwo</span>
         </a>
         <a class="shot" href="http://www.therightminecraft.com/">
-          <img src="img/portfolio/mc.jpg" />
+          <img src="img/portfolio/mc.jpg" alt="The RIght Minecraft Forums">
           <span>The Right Minecraft Forums</span>
         </a>
         <a class="shot" href="http://www.solo-soft.com/">
-          <img src="img/portfolio/solo.jpg" />
+          <img src="img/portfolio/solo.jpg" alt="Solo-Soft">
           <span>Solo-Soft</span>
         </a>
       </div>
