Updated Jon and Nick entry.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <img src="img/portfolio/cryptr.jpg" alt="Cryptr">
           <span>Cryptr</span>
         </a>
-        <a class="shot" href="http://pixeltwo.com/arkon/cssu/">
+        <a class="shot" href="http://jonandnick.com/">
           <img src="img/portfolio/jonnick.jpg" alt="Jon &amp; Nick">
           <span>Vote for Jon &amp; Nick</span>
         </a>
