--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Eugene Cheung</title>
+    <title>Eugene Cheung | Developer + Designer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="icon" type="image/png" href="img/icon.png">
     <link rel="stylesheet" href="css/styles.min.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
   </head>
   <body>
+    <nav>
+      <h5>Eugene Cheung</h5>
+      <section id="nav-contact">
+        <a href="https://www.twitter.com/arkon">Twitter</a>
+        <a href="mailto:ey.cheung@outlook.com">Email</a>
+      </section>
+    </nav>
     <header>
       <h1>Eugene Cheung</h1>
       <h4>Developer + Designer</h4>
@@ -31,19 +38,17 @@
         </a>
       </section>
     </header>
-    <section id="image">
-      <section id="hero">
-        <h2>Hi, I like creating things.</h2>
-      </section>
-      <section id="about">
-        <h3>About me</h3>
-        <div class="container">
-          <p>I’m a student at University of Toronto St. George studying to get a BSc. with a specialization in computer science.
-          I began designing and developing things at the age of 12, and I've loved crafting beautiful creations for screens big and small ever since.
-          You can check out some of creations below, or <a href="http://www.dribbble.com/arkon">my Dribbble shots</a> and my <a href="http://www.linkedin.com/pub/eugene-cheung/82/319/302">LinkedIn profile</a>.
-          <p>Interested in working with me? Get in touch through <a href="https://www.twitter.com/arkon">Twitter</a>, or <a href="mailto:ey.cheung@outlook.com">email</a>.
-        </div>
-      </section>
+    <section id="hero">
+      <h2>Hi, I like creating things.</h2>
+    </section>
+    <section id="about">
+      <h3>About me</h3>
+      <div class="container">
+        <p>I’m a student at University of Toronto St. George studying to get a BSc. with a specialization in computer science.
+        I began teaching myself about design and programming at the age of 12, and I've loved crafting beautiful creations for screens big and small ever since.
+        You can check out some of creations below, or <a href="http://www.dribbble.com/arkon">my Dribbble shots</a> and my <a href="http://www.linkedin.com/pub/eugene-cheung/82/319/302">LinkedIn profile</a>.
+        <p>Interested in working with me? Get in touch through <a href="https://www.twitter.com/arkon">Twitter</a>, or <a href="mailto:ey.cheung@outlook.com">email</a>.
+      </div>
     </section>
     <section id="portfolio">
       <h3>Some things I've made</h3>
@@ -84,16 +89,12 @@
           <img src="img/portfolio/mc.jpg" alt="The RIght Minecraft Forums">
           <span>The Right Minecraft Forums</span>
         </a>
-        <a class="shot" href="http://www.solo-soft.com/">
-          <img src="img/portfolio/solo.jpg" alt="Solo-Soft">
-          <span>Solo-Soft</span>
-        </a>
       </div>
     </section>
     <footer>
-      <a id="top">Back to top</a>
-      <p id="contact">Let's talk. <a href="https://www.twitter.com/arkon">Tweet me</a>, or <a href="mailto:ey.cheung@outlook.com">email me</a>.</p>
-      <p id="copyright">&copy; 2014 Eugene Cheung</p>
+      <a id="top" title="Back to top">↑</a>
+      <p id="contact">Let's talk. Send a <a href="https://www.twitter.com/arkon">tweet</a> or <a href="mailto:ey.cheung@outlook.com">email</a>.</p>
+      <p id="copyright">Made in Canada</p>
     </footer>
   </body>
   <script src="js/script.min.js"></script>
