--- a/index.html
+++ b/index.html
@@ -86,10 +86,15 @@
           <span>PixelTwo</span>
         </a>
         <a class="shot" href="http://www.therightminecraft.com/">
-          <img src="img/portfolio/mc.jpg" alt="The RIght Minecraft Forums">
+          <img src="img/portfolio/mc.jpg" alt="The Right Minecraft Forums">
           <span>The Right Minecraft Forums</span>
         </a>
       </div>
+    </section>
+    <section id="twitter-feed">
+      <h3>Latest tweet</h3>
+      <p id="latest">Fetching latest tweet...</p>
+      <a id="tweet-author" href="https://www.twitter.com/arkon">- @arkon</a>
     </section>
     <footer>
       <a id="top" title="Back to top">↑</a>
