Full height header!

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Eugene Cheung | Developer + Designer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="icon" type="image/png" href="img/icon.png">
-    <link rel="stylesheet" href="css/styles.min.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery.min.js"></script>
   </head>
   <body>
@@ -18,30 +18,30 @@
       </section>
     </nav>
     <header>
-      <h1>Eugene Cheung</h1>
-      <h4>Developer + Designer</h4>
-      <section id="social">
-        <a id="twitter" href="https://www.twitter.com/arkon" title="@arkon on Twitter">
-          Twitter
-        </a>
-        <a id="dribbble" href="http://www.dribbble.com/arkon" title="arkon on Dribbble">
-          Dribbble
-        </a>
-        <a id="linkedin" href="http://www.linkedin.com/pub/eugene-cheung/82/319/302" title="LinkedIn profile">
-          LinkedIn
-        </a>
-        <a id="gplus" href="https://plus.google.com/+EugeneCheung/posts" title="Google+ profile">
-          Google+
-        </a>
-        <a id="github" href="https://github.com/arkon94" title="arkon94 on GitHub">
-          GitHub
-        </a>
-      </section>
+      <div id="header-container">
+        <h1>Eugene Cheung</h1>
+        <h2>Developer + Designer</h2>
+        <section id="social">
+          <a href="https://www.twitter.com/arkon" title="@arkon on Twitter">
+            Twitter
+          </a>
+          <a href="http://www.dribbble.com/arkon" title="arkon on Dribbble">
+            Dribbble
+          </a>
+          <a href="http://www.linkedin.com/pub/eugene-cheung/82/319/302" title="LinkedIn profile">
+            LinkedIn
+          </a>
+          <a href="https://plus.google.com/+EugeneCheung/posts" title="Google+ profile">
+            Google+
+          </a>
+          <a href="https://github.com/arkon94" title="arkon94 on GitHub">
+            GitHub
+          </a>
+        </section>
+      </div>
     </header>
-    <section id="hero">
-      <h2>Hi, I like creating things.</h2>
-    </section>
     <section id="about">
+      <h4>Hi, I like creating things.</h4>
       <h3>About me</h3>
       <div class="container">
         <p>I’m a student at University of Toronto St. George studying to get a BSc. with a specialization in computer science.
@@ -91,16 +91,11 @@
         </a>
       </div>
     </section>
-    <section id="twitter-feed">
-      <h3>Latest tweet</h3>
-      <p id="latest">Fetching latest tweet...</p>
-      <a id="tweet-author" href="https://www.twitter.com/arkon">- @arkon</a>
-    </section>
     <footer>
       <a id="top" title="Back to top">↑</a>
       <p id="contact">Let's talk. Send a <a href="https://www.twitter.com/arkon">tweet</a> or <a href="mailto:ey.cheung@outlook.com">email</a>.</p>
       <p id="copyright">Made in Canada</p>
     </footer>
   </body>
-  <script src="js/script.min.js"></script>
+  <script src="js/script.js"></script>
 </html>
