Arrows and stuff.

--- a/index.html
+++ b/index.html
@@ -10,18 +10,11 @@
     <script src="js/jquery.min.js"></script>
   </head>
   <body>
-    <nav>
-      <h5>Eugene Cheung</h5>
-      <section id="nav-contact">
-        <a href="https://www.twitter.com/arkon">Twitter</a>
-        <a href="mailto:ey.cheung@outlook.com">Email</a>
-      </section>
-    </nav>
     <header>
       <div id="header-container">
         <h1>Eugene Cheung</h1>
         <h2>Developer + Designer</h2>
-        <section id="social">
+        <section id="header-social">
           <a href="https://www.twitter.com/arkon" title="@arkon on Twitter">
             Twitter
           </a>
@@ -39,15 +32,15 @@
           </a>
         </section>
       </div>
+      <a class="more" id="header-more">↓</a>
     </header>
     <section id="about">
       <h4>Hi, I like creating things.</h4>
-      <h3>About me</h3>
       <div class="container">
-        <p>I’m a student at University of Toronto St. George studying to get a BSc. with a specialization in computer science.
-        I began teaching myself about design and programming at the age of 12, and I've loved crafting beautiful creations for screens big and small ever since.
+        <p>I’m a student at University of Toronto St. George studying to get a BSc. with a specialization in Computer Science.
+        I began teaching myself about design and programming at the age of 12, and I've loved crafting beautiful creations ever since.
         You can check out some of creations below, or <a href="http://www.dribbble.com/arkon">my Dribbble shots</a> and my <a href="http://www.linkedin.com/pub/eugene-cheung/82/319/302">LinkedIn profile</a>.
-        <p>Interested in working with me? Get in touch through <a href="https://www.twitter.com/arkon">Twitter</a>, or <a href="mailto:ey.cheung@outlook.com">email</a>.
+        <p>Interested in working with me? Get in touch through <a href="https://www.twitter.com/arkon">Twitter</a> or <a href="mailto:ey.cheung@outlook.com">email</a>.
       </div>
     </section>
     <section id="portfolio">
@@ -92,9 +85,9 @@
       </div>
     </section>
     <footer>
-      <a id="top" title="Back to top">↑</a>
-      <p id="contact">Let's talk. Send a <a href="https://www.twitter.com/arkon">tweet</a> or <a href="mailto:ey.cheung@outlook.com">email</a>.</p>
-      <p id="copyright">Made in Canada</p>
+      <a class="more" id="footer-top" title="Back to top">↑</a>
+      <p id="footer-contact">Let's talk. Send a <a href="https://www.twitter.com/arkon">tweet</a> or <a href="mailto:ey.cheung@outlook.com">email</a>.</p>
+      <p id="footer-copyright">Made in Canada</p>
     </footer>
   </body>
   <script src="js/script.js"></script>
