Better arrows in Firefox.
Animations just seem to not work in Chrome. Made gradient text fall back
to normal text in Firefox/IE.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <body>
     <header>
       <div id="header-container">
-        <h1>Eugene Cheung</h1>
-        <h2>Developer + Designer</h2>
+        <hgroup id="header-titles">
+          <h1>Eugene Cheung</h1>
+          <h2>Developer + Designer</h2>
+        </hgroup>
         <section id="header-social">
           <a href="https://www.twitter.com/arkon" title="@arkon on Twitter">
             Twitter
@@ -32,7 +34,7 @@
           </a>
         </section>
       </div>
-      <a class="more" id="header-more">↓</a>
+      <a class="more" id="header-more" title="Learn more">↓</a>
     </header>
     <section id="about">
       <h4>Hi, I like creating things.</h4>
