txti + resume update.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
     <section id="portfolio">
       <h3>Some things I've made</h3>
       <div class="container">
+        <a class="shot" href="http://www.unhaltable.com/">
+          <img src="img/portfolio/txti.jpg" alt="txti">
+          <span>txti</span>
+        </a>
         <a class="shot" href="http://www.cryptr.ca/uv/">
           <img src="img/portfolio/uv.jpg" alt="Ultraviolet">
           <span>Ultraviolet</span>
