--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Eugene Cheung | Developer + Designer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="icon" type="image/png" href="img/icon.png">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/png" href="/img/icon.png">
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
     <header>
