Fixed the links.

--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
     <section id="portfolio">
       <h3>Some things I've made</h3>
       <div class="container">
-        <a class="shot" href="http://www.txti.unhaltable.com/">
+        <a class="shot" href="http://txti.unhaltable.com/">
           <img src="img/portfolio/txti.jpg" alt="txti">
           <span>txti</span>
         </a>
-        <a class="shot" href="http://www.ultraviolet.unhaltable.com/">
+        <a class="shot" href="http://ultraviolet.unhaltable.com/">
           <img src="img/portfolio/uv.jpg" alt="Ultraviolet">
           <span>Ultraviolet</span>
         </a>
-        <a class="shot" href="http://www.cryptr.unhaltable.com/">
+        <a class="shot" href="http://cryptr.unhaltable.com/">
           <img src="img/portfolio/cryptr.jpg" alt="Cryptr">
           <span>Cryptr</span>
         </a>
