New GitHub handle.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a href="https://plus.google.com/+EugeneCheung/posts" title="Google+ profile">
             Google+
           </a>
-          <a href="https://github.com/arkon94" title="arkon94 on GitHub">
+          <a href="https://github.com/arkon" title="arkon on GitHub">
             GitHub
           </a>
         </section>
