--- a/files/cssu.html
+++ b/files/cssu.html
@@ -49,6 +49,21 @@
       z-index: 10000;
     }
 
+    header .content .menu {
+      display: table;
+      position: absolute;
+      bottom: 55px;
+      width: 100%;
+    }
+
+    p, #search {
+      display: table-cell;
+    }
+
+    #search {
+      text-align: right;
+    }
+
     header .triangle {
       width: 0;
       height: 0;
@@ -108,7 +123,11 @@
       <h1>CSSU</h1>
       <h2>University of Toronto Computer Science Student Union</h2>
 
-      <p>Thank you for being a friend. Travelled down the road and back again. Your heart is true you're a pal and a confidant. So get a witch's shawl on a broomstick you can crawl on. Were gonna pay a call on the Addams Family. Just two good ol' boys Never meanin' no harm. Beats all you've ever saw been in trouble with the law since the day they was born. On the most sensational inspirational celebrational Muppetational… This is what we call the Muppet Show. It's time to play the music. It's time to light the lights. It's time to meet the Muppets on the Muppet Show tonight.</p>
+      <div class='menu'>
+        <p>The menu would go here</p>
+
+        <div id='search'>Search</div>
+      </div>
     </div>
     <div class='triangle'></div>
   </header>
