--- a/index.html
+++ b/index.html
@@ -23,14 +23,11 @@
           <a href="http://www.dribbble.com/arkon" title="arkon on Dribbble">
             Dribbble
           </a>
-          <a href="http://www.linkedin.com/pub/eugene-cheung/82/319/302" title="LinkedIn profile">
-            LinkedIn
-          </a>
-          <a href="https://plus.google.com/+EugeneCheung/posts" title="Google+ profile">
-            Google+
-          </a>
           <a href="https://github.com/arkon" title="arkon on GitHub">
             GitHub
+          </a>
+          <a href="http://www.linkedin.com/pub/eugene-cheung/82/319/302" title="LinkedIn profile">
+            LinkedIn
           </a>
         </section>
       </div>
@@ -48,45 +45,68 @@
     <section id="portfolio">
       <h3>Some things I've made</h3>
       <div class="container">
+        <a class="shot" href="http://cssu.cdf.toronto.edu/">
+          <img src="img/portfolio/cssu.jpg" alt="University of Toronto Computer Science Student Union">
+          <span>
+            <p>CSSU</p>
+            <p>Rebranding + web design/dev</p>
+          </span>
+        </a>
+        <a class="shot" href="https://play.google.com/store/apps/details?id=me.echeung.cdflabs">
+          <img src="img/portfolio/cdf.jpg" alt="CDF Labs Android app">
+          <span>
+            <p>CDF Labs</p>
+            <p>Android app development</p>
+          </span>
+        </a>
         <a class="shot" href="http://txti.unhaltable.com/">
           <img src="img/portfolio/txti.jpg" alt="txti">
-          <span>txti</span>
+          <span>
+            <p>txti</p>
+            <p>Website design + development</p>
+          </span>
         </a>
         <a class="shot" href="http://ultraviolet.unhaltable.com/">
           <img src="img/portfolio/uv.jpg" alt="Ultraviolet">
-          <span>Ultraviolet</span>
+          <span>
+            <p>Ultraviolet</p>
+            <p>Chrome app design + development</p>
+          </span>
         </a>
         <a class="shot" href="http://cryptr.unhaltable.com/">
           <img src="img/portfolio/cryptr.jpg" alt="Cryptr">
-          <span>Cryptr</span>
+          <span>
+            <p>Cryptr</p>
+            <p>Chrome app design + development</p>
+          </span>
         </a>
         <a class="shot" href="http://jonandnick.com/">
           <img src="img/portfolio/jonnick.jpg" alt="Jon &amp; Nick">
-          <span>Vote for Jon &amp; Nick</span>
+          <span>
+            <p>Vote for Jon &amp; Nick</p>
+            <p>Website design + development</p>
+          </span>
         </a>
         <a class="shot" href="https://chrome.google.com/webstore/detail/retwit-for-twitter/bkpjdbhepoejcinkccodijdpoifkfbnl">
           <img src="img/portfolio/retwit.jpg" alt="ReTwit for Twitter">
-          <span>ReTwit for Twitter</span>
-        </a>
-        <a class="shot" href="http://dribbble.com/shots/1446264-Transit-Watch">
-          <img src="img/portfolio/transit.jpg" alt="Transit Watch">
-          <span>Transit Watch</span>
+          <span>
+            <p>ReTwit for Twitter</p>
+            <p>Chrome extension design + development</p>
+          </span>
         </a>
         <a class="shot" href="http://www.thinqtek.com/leanback/">
           <img src="img/portfolio/leanback.jpg" alt="Leanback">
-          <span>Leanback TV</span>
-        </a>
-        <a class="shot" href="http://thinqtek.com/newgenbook/">
-          <img src="img/portfolio/ngb.jpg" alt="NewGenBook for Facebook">
-          <span>NewGenBook</span>
-        </a>
-        <a class="shot" href="http://pixeltwo.com/">
-          <img src="img/portfolio/pixeltwo.jpg" alt="PixelTwo">
-          <span>PixelTwo</span>
+          <span>
+            <p>Leanback TV</p>
+            <p>Chrome app design</p>
+          </span>
         </a>
         <a class="shot" href="http://www.therightminecraft.com/">
           <img src="img/portfolio/mc.jpg" alt="The Right Minecraft Forums">
-          <span>The Right Minecraft Forums</span>
+          <span>
+            <p>The Right Minecraft</p>
+            <p>Web forum design + development</p>
+          </span>
         </a>
       </div>
     </section>
