--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <title>Eugene Cheung | Developer + Designer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="icon" type="image/png" href="/img/icon.png">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.min.css">
   </head>
   <body class="404">
     <header>
