--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Eugene Cheung | Developer + Designer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="icon" type="image/png" href="img/icon.png">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.min.css">
     <script src="js/jquery.min.js"></script>
   </head>
   <body>
@@ -116,5 +116,5 @@
       <p id="footer-copyright">Made in Canada</p>
     </footer>
   </body>
-  <script src="js/script.js"></script>
+  <script src="js/script.min.js"></script>
 </html>
